@@ -49,9 +49,9 @@ void Shm_Lock(
 
   rtems_interrupt_disable( isr_level );
     Shm_isrstat = isr_level;
-    asm volatile( "lockit:"    : : );
-    asm volatile( "tas %0@"    : "=a" (lockptr) : "0" (lockptr) );
-    asm volatile( "bne lockit" : : );
+    __asm__ volatile( "lockit:"    : : );
+    __asm__ volatile( "tas %0@"    : "=a" (lockptr) : "0" (lockptr) );
+    __asm__ volatile( "bne lockit" : : );
 /* should delay */
 }
 
